grammar/.antlr/STParser.java
// Generated from /Users/dmitriid/Documents/code_ext_test_1/st2js/grammar/ST.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class STParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, FUNCTION_BLOCK=2, END_FUNCTION_BLOCK=3, FUNCTION=4, END_FUNCTION=5, 
		PROGRAM=6, END_PROGRAM=7, VAR_INPUT=8, VAR_OUTPUT=9, VAR_IN_OUT=10, VAR_GLOBAL=11, 
		VAR_TEMP=12, VAR_EXTERNAL=13, VAR=14, END_VAR=15, CONSTANT=16, RETAIN=17, 
		PERSISTENT=18, AT=19, TYPE=20, END_TYPE=21, STRUCT=22, END_STRUCT=23, 
		ARRAY=24, OF=25, STRING_TYPE=26, WSTRING_TYPE=27, BOOL=28, BYTE=29, WORD=30, 
		DWORD=31, LWORD=32, SINT=33, INT=34, DINT=35, LINT=36, USINT=37, UINT=38, 
		UDINT=39, ULINT=40, REAL=41, LREAL=42, TIME=43, DATE=44, TIME_OF_DAY=45, 
		DATE_AND_TIME=46, ANY=47, ANY_NUM=48, ANY_INT=49, ANY_REAL=50, ANY_BIT=51, 
		ANY_STRING=52, ANY_DATE=53, IF=54, THEN=55, ELSIF=56, ELSE=57, END_IF=58, 
		CASE=59, END_CASE=60, FOR=61, TO=62, BY=63, DO=64, END_FOR=65, WHILE=66, 
		END_WHILE=67, REPEAT=68, UNTIL=69, END_REPEAT=70, RETURN=71, EXIT=72, 
		CONTINUE=73, MOD=74, AND=75, OR=76, XOR=77, NOT=78, BOOL_LITERAL=79, TIME_LITERAL=80, 
		DATE_LITERAL=81, REAL_LITERAL=82, INTEGER_LITERAL=83, STRING_LITERAL=84, 
		IDENTIFIER=85, ASSIGN=86, POWER=87, NE=88, LE=89, GE=90, RANGE=91, EQ=92, 
		LT=93, GT=94, PLUS=95, MINUS=96, STAR=97, SLASH=98, AMP=99, HASH=100, 
		LPAREN=101, RPAREN=102, LBRACKET=103, RBRACKET=104, COMMA=105, SEMICOLON=106, 
		COLON=107, DOT=108, WS=109, LINE_COMMENT=110, BLOCK_COMMENT=111;
	public static final int
		RULE_compilationUnit = 0, RULE_functionDeclaration = 1, RULE_functionBlockDeclaration = 2, 
		RULE_programDeclaration = 3, RULE_typeDeclaration = 4, RULE_typeDefinition = 5, 
		RULE_typeSpec = 6, RULE_structSpec = 7, RULE_structField = 8, RULE_enumSpec = 9, 
		RULE_enumValue = 10, RULE_subrangeSpec = 11, RULE_varSection = 12, RULE_varKeyword = 13, 
		RULE_varModifier = 14, RULE_varDeclaration = 15, RULE_identifierList = 16, 
		RULE_directVariable = 17, RULE_dataType = 18, RULE_primitiveType = 19, 
		RULE_arrayType = 20, RULE_subrange = 21, RULE_stringType = 22, RULE_arraySpec = 23, 
		RULE_statementList = 24, RULE_statement = 25, RULE_assignmentStatement = 26, 
		RULE_ifStatement = 27, RULE_caseStatement = 28, RULE_caseClause = 29, 
		RULE_caseLabel = 30, RULE_forStatement = 31, RULE_whileStatement = 32, 
		RULE_repeatStatement = 33, RULE_returnStatement = 34, RULE_exitStatement = 35, 
		RULE_continueStatement = 36, RULE_functionCallStatement = 37, RULE_expression = 38, 
		RULE_orExpression = 39, RULE_xorExpression = 40, RULE_andExpression = 41, 
		RULE_comparison = 42, RULE_addExpression = 43, RULE_mulExpression = 44, 
		RULE_powerExpression = 45, RULE_unaryExpression = 46, RULE_primaryExpression = 47, 
		RULE_variable = 48, RULE_functionCall = 49, RULE_argumentList = 50, RULE_argument = 51, 
		RULE_literal = 52, RULE_typedLiteral = 53, RULE_identifier = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "functionDeclaration", "functionBlockDeclaration", 
			"programDeclaration", "typeDeclaration", "typeDefinition", "typeSpec", 
			"structSpec", "structField", "enumSpec", "enumValue", "subrangeSpec", 
			"varSection", "varKeyword", "varModifier", "varDeclaration", "identifierList", 
			"directVariable", "dataType", "primitiveType", "arrayType", "subrange", 
			"stringType", "arraySpec", "statementList", "statement", "assignmentStatement", 
			"ifStatement", "caseStatement", "caseClause", "caseLabel", "forStatement", 
			"whileStatement", "repeatStatement", "returnStatement", "exitStatement", 
			"continueStatement", "functionCallStatement", "expression", "orExpression", 
			"xorExpression", "andExpression", "comparison", "addExpression", "mulExpression", 
			"powerExpression", "unaryExpression", "primaryExpression", "variable", 
			"functionCall", "argumentList", "argument", "literal", "typedLiteral", 
			"identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'%'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "':='", "'**'", "'<>'", "'<='", "'>='", "'..'", "'='", "'<'", 
			"'>'", "'+'", "'-'", "'*'", "'/'", "'&'", "'#'", "'('", "')'", "'['", 
			"']'", "','", "';'", "':'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "FUNCTION_BLOCK", "END_FUNCTION_BLOCK", "FUNCTION", "END_FUNCTION", 
			"PROGRAM", "END_PROGRAM", "VAR_INPUT", "VAR_OUTPUT", "VAR_IN_OUT", "VAR_GLOBAL", 
			"VAR_TEMP", "VAR_EXTERNAL", "VAR", "END_VAR", "CONSTANT", "RETAIN", "PERSISTENT", 
			"AT", "TYPE", "END_TYPE", "STRUCT", "END_STRUCT", "ARRAY", "OF", "STRING_TYPE", 
			"WSTRING_TYPE", "BOOL", "BYTE", "WORD", "DWORD", "LWORD", "SINT", "INT", 
			"DINT", "LINT", "USINT", "UINT", "UDINT", "ULINT", "REAL", "LREAL", "TIME", 
			"DATE", "TIME_OF_DAY", "DATE_AND_TIME", "ANY", "ANY_NUM", "ANY_INT", 
			"ANY_REAL", "ANY_BIT", "ANY_STRING", "ANY_DATE", "IF", "THEN", "ELSIF", 
			"ELSE", "END_IF", "CASE", "END_CASE", "FOR", "TO", "BY", "DO", "END_FOR", 
			"WHILE", "END_WHILE", "REPEAT", "UNTIL", "END_REPEAT", "RETURN", "EXIT", 
			"CONTINUE", "MOD", "AND", "OR", "XOR", "NOT", "BOOL_LITERAL", "TIME_LITERAL", 
			"DATE_LITERAL", "REAL_LITERAL", "INTEGER_LITERAL", "STRING_LITERAL", 
			"IDENTIFIER", "ASSIGN", "POWER", "NE", "LE", "GE", "RANGE", "EQ", "LT", 
			"GT", "PLUS", "MINUS", "STAR", "SLASH", "AMP", "HASH", "LPAREN", "RPAREN", 
			"LBRACKET", "RBRACKET", "COMMA", "SEMICOLON", "COLON", "DOT", "WS", "LINE_COMMENT", 
			"BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ST.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public STParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(STParser.EOF, 0); }
		public List<FunctionDeclarationContext> functionDeclaration() {
			return getRuleContexts(FunctionDeclarationContext.class);
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return getRuleContext(FunctionDeclarationContext.class,i);
		}
		public List<FunctionBlockDeclarationContext> functionBlockDeclaration() {
			return getRuleContexts(FunctionBlockDeclarationContext.class);
		}
		public FunctionBlockDeclarationContext functionBlockDeclaration(int i) {
			return getRuleContext(FunctionBlockDeclarationContext.class,i);
		}
		public List<ProgramDeclarationContext> programDeclaration() {
			return getRuleContexts(ProgramDeclarationContext.class);
		}
		public ProgramDeclarationContext programDeclaration(int i) {
			return getRuleContext(ProgramDeclarationContext.class,i);
		}
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1048660L) != 0)) {
				{
				setState(114);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FUNCTION:
					{
					setState(110);
					functionDeclaration();
					}
					break;
				case FUNCTION_BLOCK:
					{
					setState(111);
					functionBlockDeclaration();
					}
					break;
				case PROGRAM:
					{
					setState(112);
					programDeclaration();
					}
					break;
				case TYPE:
					{
					setState(113);
					typeDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(STParser.FUNCTION, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public TerminalNode END_FUNCTION() { return getToken(STParser.END_FUNCTION, 0); }
		public TerminalNode COLON() { return getToken(STParser.COLON, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public List<VarSectionContext> varSection() {
			return getRuleContexts(VarSectionContext.class);
		}
		public VarSectionContext varSection(int i) {
			return getRuleContext(VarSectionContext.class,i);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(FUNCTION);
			setState(122);
			identifier();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(123);
				match(COLON);
				setState(124);
				dataType();
				}
			}

			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32512L) != 0)) {
				{
				{
				setState(127);
				varSection();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			statementList();
			setState(134);
			match(END_FUNCTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionBlockDeclarationContext extends ParserRuleContext {
		public TerminalNode FUNCTION_BLOCK() { return getToken(STParser.FUNCTION_BLOCK, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public TerminalNode END_FUNCTION_BLOCK() { return getToken(STParser.END_FUNCTION_BLOCK, 0); }
		public List<VarSectionContext> varSection() {
			return getRuleContexts(VarSectionContext.class);
		}
		public VarSectionContext varSection(int i) {
			return getRuleContext(VarSectionContext.class,i);
		}
		public FunctionBlockDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBlockDeclaration; }
	}

	public final FunctionBlockDeclarationContext functionBlockDeclaration() throws RecognitionException {
		FunctionBlockDeclarationContext _localctx = new FunctionBlockDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionBlockDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(FUNCTION_BLOCK);
			setState(137);
			identifier();
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32512L) != 0)) {
				{
				{
				setState(138);
				varSection();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			statementList();
			setState(145);
			match(END_FUNCTION_BLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramDeclarationContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(STParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public StatementListContext statementList() {
			return getRuleContext(StatementListContext.class,0);
		}
		public TerminalNode END_PROGRAM() { return getToken(STParser.END_PROGRAM, 0); }
		public List<VarSectionContext> varSection() {
			return getRuleContexts(VarSectionContext.class);
		}
		public VarSectionContext varSection(int i) {
			return getRuleContext(VarSectionContext.class,i);
		}
		public ProgramDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programDeclaration; }
	}

	public final ProgramDeclarationContext programDeclaration() throws RecognitionException {
		ProgramDeclarationContext _localctx = new ProgramDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_programDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(PROGRAM);
			setState(148);
			identifier();
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 32512L) != 0)) {
				{
				{
				setState(149);
				varSection();
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			statementList();
			setState(156);
			match(END_PROGRAM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
